# watchdog_rtes

./: CMakeLists.txt  README.md  compile.sh  plot.sh  setenv
hello_world/serial/: CMakeLists.txt  hello_serial.c
src/serial/: CMakeLists.txt  FreeRTOSConfig.h  main.c
tools/: log_parser.py
